styles.css
/* General Styling */
body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    color: #333;
    min-width: 100vw;
    overflow-x: hidden;
    background-color: #f1f8f5;
}

/* Navbar */
.navbar {
    background: rgba(23, 49, 53, 0.8);
    backdrop-filter: blur(5px);
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
    padding-left: 20px;
    padding-right: 20px;
}

.navbar-nav {
    flex-direction: row;
}

.navbar-brand,
.navbar-nav .nav-link {
    color: #fff !important;
}

.navbar-brand:hover,
.navbar-nav .nav-link:hover {
    color: #e0862b !important;
    transform: scale(1.05);
    transition: transform 0.2s ease-in-out;
}



/* Parallax Hero Section Styling */
.hero {
    position: relative;
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #fff;
    text-align: center;
    overflow: hidden;
}

.hero-background {
    background-image: url('assets/Home/Banner-image-20.png');
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    /* Parallax effect */
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
}

.hero-content {
    position: relative;
    z-index: 3;
}

.hero h1 {
    font-size: 3rem;
    font-weight: bold;
    margin-bottom: 0.5rem;
}

.hero p {
    font-size: 1.5rem;
    margin-bottom: 1.5rem;
}

/* Hero btn styling */

.hero .btn-primary {
    background-color: #d9741f;
    border: none;
    color: #fff;
    padding: 10px 20px;
    font-size: 1.2rem;
}

.hero .btn-primary:hover {
    background-color: #f67a15 !important;
    transform: scale(1.1);
    transition: transform 0.2s ease-in-out;
}

.btn-effect {
    position: relative;
    overflow: hidden;
    transition: all 0.2s linear;
}

.btn-effect::before {
    content: "\f054";
    font-family: 'Font Awesome 5 Free';
    font-weight: 900;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 30px;
    background-color: rgba(0, 0, 0, 0.3);
    border-radius: 0 50% 50% 0;
    transform: scale(0, 1);
    transform-origin: left center;
    transition: all 0.2s linear;
}

.btn-effect:hover {
    text-indent: 30px;
}

.btn-effect:hover::before {
    transform: scale(1, 1);
    text-indent: 0;
}

/* Our Story Section Styling */
.our-story {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 20px;
    min-height: 72vh;
    flex-direction: row;
    text-align: left;
}

.story-content {
    width: 50%;
    padding-right: 20px;
}

.story-photo {
    width: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* Flip Effect */
.flip-container {
    perspective: 1000px;
    width: 100%;
    max-width: 500px;
    height: auto;
}

.flipper {
    position: relative;
    transition: transform 0.6s;
    transform-style: preserve-3d;
    width: 100%;
    padding-top: 66.66%;
}

.flip-container:hover .flipper {
    transform: rotateY(180deg);
}

.front,
.back {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    backface-visibility: hidden;
    border-radius: 15px;
}

.back {
    transform: rotateY(180deg);
}

/* Footer Styling */

footer {
    background-color: #173135;
    color: white;
    padding-top: 10px;
    padding-left: 20px;
    padding-right: 20px;
    text-align: center;
    margin-top: 50px;
}

footer p {
    margin: 0;
}

.footer-signature {
    padding-top: 10px;
}


/* Garden Plants */

/* Bootstrap Carousel */

.carousel-container {
    width: 100%;
}

.carousel-item img {
    width: 100vw;
    height: 100vh;
    object-fit: cover;
}

.carousel-caption {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -20%);
    font-size: 2rem;
    text-align: center;
    color: #fff;
}

/* Bootstrap Cards */

.card {
    border-radius: 10px;
    overflow: hidden;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
    margin: 3rem;
}

.card:hover {
    transform: scale(1.05);
    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
}

.card-img-top {
    height: 350px;
    object-fit: cover;
}

/* Accordion Styling */

.accordion-button {
    background-color: #ecbe93;
    color: #000;
}

.accordion-button:not(.collapsed) {
    background-color: #dba672;
    color: #fff;
}

.accordion-body {
    background-color: #f1f8f5;
    color: #333;
}

.accordion-products {
    background-color: #f1f8f5;
}


/* Contact Page */
.contact-us {
    min-height: 80vh;
    margin-top: 20px;
    padding: 4rem;
    display: flex;
    align-items: center;
}

/* Contact Form */

.contact-form-section {
    width: 50%;
}

.form-group {
    margin-top: 15px;
    margin-bottom: 15px;
}

label {
    margin-bottom: 5px;
}

button[type="submit"] {
    background-color: #e0862b !important;
    color: white !important;
    font-weight: bold !important;
    border: none !important;
    padding: 10px 20px !important;
    border-radius: 5px !important;
    transition: background-color 0.2s ease !important;
}

button[type="submit"]:hover {
    background-color: #d47520 !important;
}

/* Membership Form */

.membership-radio-section {
    margin-bottom: 1rem;
}

.membership-radio-btn {
    margin-right: 5rem;
}

.membership-form-section {
    width: 50%;
    display: grid;
    flex-direction: column;
    flex-wrap: wrap;
    align-content: center;
    justify-content: center;
    height: 100%;
}

.membership-form-section h2 {
    padding-bottom: 20px;
    justify-self: center;
}



.membership-img {
    width: 300px;
    display: block;
    margin: 0 auto;
    transition: transform 0.3s ease-in-out;
    justify-self: center;
}

.membership-img:hover {
    animation: grow-plant 4000ms;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;

}

@keyframes grow-plant {
    from {
        transform: translateY(0px);
    }

    to {
        transform: translateY(-40px);
    }
}

.membership-text {
    padding-top: 10px;
    font-size: large;
    justify-self: center;

}

/* Mentors Section */

.mentors-section {
    padding: 5rem;
}

.mentors-section h2 {
    margin-bottom: 2rem;
}

.mentor-card {
    border-top-left-radius: 100px;
    border-bottom-right-radius: 100px;

}

.mentor-img {
    max-height: 300px;
    object-fit: cover;
}


/* Media Queries */

@media (max-width: 988px) {

    /* General */

    .nav-link {
        padding: 10px;
    }

    footer {
        margin-top: 0;
    }

    /* Garden Plants */

    .carousel-caption h5 {
        font-size: 3rem;
    }

    .carousel-caption p {
        font-size: 1.5rem;
    }

    .card {
        margin: 1rem;
    }

    .card-img-top {
        height: 250px;
    }

    .most-ordered-body {
        padding: 0.5rem;
    }

    /* Contact Us */

    .contact-us {
        padding: 3rem;
        flex-direction: column;
        width: 100%;
    }

    .mentors-card {
        margin: .5rem;
    }


    .contact-form-section {
        margin-bottom: 5rem;
        width: 100%;

    } 
    
    .membership-form-section {
        margin-top: 2rem;
        width: 100%;
}
}

@media (max-width: 768px) {

    /* Home */

    .hero h1 {
        font-size: 1.5rem;
    }

    .hero p {
        font-size: 1.2rem;
    }

    .hero-content {
        padding: 2rem;
    }

    .our-story {
        flex-direction: column;
        text-align: center;
    }

    .story-content {
        width: 100%;
        padding: 2rem;

    }

    .story-content p {
        text-align: justify;
    }

    .story-photo {
        width: 100%;
        padding-left: 2rem;
        padding-right: 2rem;
        padding-bottom: 2rem;
        padding-top: 0;
    }

    /* Garden Plants */

    .card {
        margin: 3rem;
    }

    /* Contact Us */

    .mentors-section {
        padding: 2rem;
        text-align: center;
    }

}

@media (max-width: 768px) {

    /* Contact Us */
    .card-img-top {
        height: 500px;
    }

    .mentor-img {
        max-height: fit-content;
    }
}

@media (max-width: 375px) {

    /* Contact Us */
    .card {
        margin: 1rem;
    }
}

